reportbug (4.11~WIP) UNRELEASED; urgency=low

  * bin/reportbug
    - import LICENSE from reportbug, so --license won't trigger an error

 -- Sandro Tosi <morph@debian.org>  Fri, 08 Jan 2010 01:18:38 +0100

reportbug (4.10) unstable; urgency=low

  * conf/reportbug.conf, man/reportbug.conf.5
    - added 'keyid' documentation; thanks to gregor herrmann for the report and
      to Carl Chenet for the partial patch; Closes: #558364
  * bin/querybts
    - use optparse instead of getopt to parse CLI options and arguments;
      Closes: #559677
    - warn users for options not available in querybts (because they are
      reportbug-only); thank to Marc-Jano Knopp, Josh Triplett and Tim Connors
      for the reports and to Carl Chenet for the patch; Closes: #501285
  * reportbug/ui/text_ui.py
    - if help option is selected in debconf values inclusion menu, the second
      message doesn't contain newline, it's fixed now; thanks to Miroslaw
      Zalewski for the report; Closes: #560302
    - retrieve the package information from the report using doing a lower-case
      check; thanks to Dan Greene for the report; Closes: #562912
    - expanded the previous fix to consider either bugs submitted against the
      binary (pseudo-header 'Package') or the source (pseudo-header 'Source')
      package; thanks to Laurent Fousse for the report; Closes: #559065
  * share/presubj
    - refer to reportbug.d.o instead of bugs.d.o as SMTP server; thanks to Karl
      Goetz for the report and patch; Closes: #561802
  * doc/README.{developers, source}
    - fix them to be valid reStrucuturedText files; thanks to Jakub Wilk for the
      report; Closes: #563051
  * debian/{control,rules,source.lintian-overrides}, man/reportbug.ja.1, po4a/*
    - removed l10n contents: they were always outdated and just a restrict set
      of the languages Debian supports
  * man/{querybts.1, reportbug.1}
    - removed NOTE about Python's getopt: both tools are now using optparse